--- a/.github/workflows/deploy-railway-node.yml
+++ b/.github/workflows/deploy-railway-node.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ env.NODE_VERSION }}
+        node-version: 12.0
         cache: 'npm'
 
     - name: npm install, build, and test
